# ghostpost_backend

./: manage.py  pyproject.toml
ghost_react/: asgi.py  settings.py  urls.py  wsgi.py
quickstart/: models.py  serializers.py  views.py
quickstart/migrations/: 0001_initial.py  0002_remove_post_screen_name.py
